# xbmc-addon-p2pproxy

./: .cvsignore  .gitignore  1_CHECKOUT  2_UPDATE  3_COMMIT  COPYING  Makefile.am  README.md  changelog.txt  configure.in
addons/: Makefile.am
addons/pvr.p2pproxy/: Makefile.am  addon.xml.in
addons/pvr.p2pproxy/resources/: settings.xml
project/VS2010Express/: buildzip.bat  xbmc-addon-p2pproxy.sln
project/VS2010Express/p2pproxy/: xbmc-addon-p2pproxy.vcxproj
project/VS2010Express/platform/: platform.vcxproj
src/: Makefile.am
src/p2pproxy/: Makefile.am  PVRIptvData.cpp  PVRIptvData.h  client.cpp  client.h
шрифта шрифт /<font><font>шрифт </font></: font>fontfb
